--- a/HTML练习/结构伪类-nth-of-type.html
+++ b/HTML练习/结构伪类-nth-of-type.html
@@ -12,7 +12,7 @@
     }
 
     /* 需求: 选择box中的第三个div元素(排除所有的干扰项) */
-    /* 元素:nth-of-type, 只计算符合我元素类型的数量的元素 */
+    /* 元素: nth-of-type, 只计算符合我元素类型的数量的元素 */
     .box > div:nth-of-type(3) {
       color: blue;
     }
@@ -36,6 +36,7 @@
     <div>我是列表8</div>
     <div>我是列表9</div>
     <div>我是列表10</div>
+    <div>我是列表11</div>
   </div>
 
 </body>
