--- a/HTML练习/margin-left设置负值的问题.html
+++ b/HTML练习/margin-left设置负值的问题.html
@@ -11,11 +11,11 @@
     }
 
     span {
-      background-color: #f00;
+      background-color: #F00;
     }
 
     strong {
-      background-color: #0f0;
+      background-color: #0F0;
       margin-left: -10px;
     }
   </style>
